<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OldNewspaperFrontPage</string>
    <string name="app_welcome">HALFTONE</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_start">Old Newspaper App</string>
    <string name="button_take">Take Photo</string>
    <string name="button_load">Load Photo</string>
    <string name="title_activity_display_image_screen">Convert</string>
    <string name="button_halftone">Convert!</string>
    <string name="taking_photo">Taking Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="halftone_button">Use image for halftoning</string>
    <string name="load_camera">Load from Camera</string>
    <string name="share_button">Share!</string>
    <string name="share_with">Share via</string>
    <string name="title_activity_edit_photo">Edit Photo</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_caption">Add Caption</string>
    <string name="diamond">Diamonds</string>
    <string name="rectangle">Rectangles</string>
    <string name="circle">Circles</string>
    <string name="title_activity_choose_filter">ChooseFilterActivity</string>
    <string name="applynegative">Negative</string>
    <string name="applyhalftone">Halftone</string>
    <string name="applygaussian">Gaussian</string>
    <string name="halftone_dialog">Halftone Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="set_halftone_angle">Set angle:</string>
    <string name="title_activity_halftone_dialog">HalftoneDialogActivity</string>

</resources>
