<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.oldnewspaperfrontpage.HalftoneDialogActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="298dp"
        android:layout_height="302dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_halftone_angle"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:id="@+id/angleValue"  
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content" 
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <SeekBar
            android:id="@+id/seekBarAngle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="@integer/m90" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            
			<RadioButton
	            android:id="@+id/diamond"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:onClick="setOptionDiamond"
	            android:text="@string/diamond" />
			
            <RadioButton
                android:id="@+id/rectangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setOptionRectangle"
                android:text="@string/rectangle" />

            <RadioButton
                android:id="@+id/circles"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="setOptionCircle"
                android:text="@string/circle" />
        </RadioGroup>

        <Button
            android:id="@+id/dialogok"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

    </LinearLayout>

</RelativeLayout>
