<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/applynegative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="109dp"
        android:onClick="negative"
        android:text="@string/applynegative" />

    <Button
        android:id="@+id/applygaussian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/applynegative"
        android:layout_alignBottom="@+id/applynegative"
        android:layout_centerHorizontal="true"
        android:onClick="gaussian"
        android:text="@string/applygaussian" />

    <Button
        android:id="@+id/applyhalftone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/applygaussian"
        android:layout_alignBottom="@+id/applygaussian"
        android:layout_alignParentLeft="true"
        android:text="@string/applyhalftone" />

</RelativeLayout>